# pyinstrumentor

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: api.md  hooks.md  index.md  metrics.md  usage.md
src/pyinstrumentor/: __init__.py  core.py  exporter.py  hook_strategies.py  hooks.py  instrumentor.py  metrics.py  monkeypatcher.py
tests/: test_instrumentation.py
