[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinstrumentor"
version = "0.1.0"
description = "Automatic function instrumentation using Prometheus"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
dependencies = [
  "prometheus_client>=0.16.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/yourusername/pyinstrumentor"
Source = "https://github.com/yourusername/pyinstrumentor"
